Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41356

memory usage when downloading large files on iOS with https

    XMLWordPrintable

Details

    • iOS/tvOS/watchOS
    • 9ea80826581b3ce8081567823e2377b8590917b8

    Description

      When downloading a large file on iOS via QNetworkReply using https,
      the whole file seems to be held in memory during download.
      After the download is complete, the memory usage is back to normal again.
      this is no problem unless you want to download really large files (200MB)
      and iOS can't allocate more memory and crashes.
      The same download with a normal http request doesn't show this behaviour.

      I think the reason is that in qtbase/src/network/access/qnetworkreplynsurlconnectionimpl.mm
      in didReceiveData the data is always appended to the responseData variable,
      but in readData the read data is not removed from responseData.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sorvig Morten Sørvig
            lkdem Ludger Krämer
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes